Simplify MCP helper code (#38960)
Refactor small duplicated MCP and MCP E2E helper flows without changing
public behavior. Reuse shared payload field builders, remove redundant
wrapper methods, simplify repeated provider collections, and keep existing
descriptor, SQL classification, workflow, and model-facing formatter tests
passing.